--- a/style.css
+++ b/style.css
@@ -15,5 +15,5 @@
     text-align: center;
     font-size: 40px;
     color: #333; /* You can change the color as per your preference */
-    margin-bottom: 20px; font-family: 'Sixtyfour', sans-serif;
+    margin-bottom: 20px; /font-family: 'Sixtyfour', sans-serif;
 }
