--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 10px;
   }
   
-  .grid-item {
+  .grid-item {height:50vh;
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
