--- a/style.css
+++ b/style.css
@@ -4,16 +4,13 @@
     padding: 10px;
   }
   
-  .grid-item {height:50vh;
-    background-color: rgba(255, 255, 255, 0.8);
+  .grid-item {
+    background-color: rgba(255, 255, 255, 0.8); /* Adjust or remove as needed */
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
     font-size: 30px;
     text-align: center;
+    background-size: cover; /* Ensures the image covers the whole div */
+    background-position: center; /* Centers the background image */
+    height: 50vh; /* Sets the height to half of the viewport height */
   }
-  h1 {
-    text-align: center;
-    font-size: 40px;
-    color: #333; /* You can change the color as per your preference */
-    margin-bottom: 20px; /font-family: 'Sixtyfour', sans-serif;
-}
