--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     padding: 10px;
   }
   
+
+  model-viewer {
+    width: 100vw; /* 100% of the viewport width */
+    height: 100vh; /* 100% of the viewport height */
+    
   .grid-item {
     background-color: rgba(255, 255, 255, 0.8); /* Adjust or remove as needed */
     border: 1px solid rgba(0, 0, 0, 0.8);
